# django-strong-migrations

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  docker-compose.yml  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: CODEOWNERS
.github/workflows/: lint.yml  test.yml
django_strong_migrations.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
requirements/: lint.txt  postgres.txt  test.txt  tox.txt
strong_migrations/: __init__.py  apps.py  set_lock_timeout.py
strong_migrations/check_safety/: __init__.py  check_migration_safety.py  checks.py  info_messages.py  migration_safety.py  safety_assured.py
strong_migrations/errors/: __init__.py  unsafe_migration_error.py
strong_migrations/management/commands/: migrate.py
tests/: conftest.py  test_migrate.py  test_set_lock_timeout.py
tests/check_safety/: test_migration_safety.py  test_safety_assured.py
tests/fixtures/migrations/: add_constraint.py  add_index.py  add_non_nullable_field.py  add_non_nullable_field_with_jsonb_default.py  add_nullable_field.py  add_nullable_foreign_key.py  add_nullable_foreign_key_no_db_constraint.py  alter_field_add_index.py  alter_field_with_default_make_nullable.py  alter_field_without_default_make_nullable.py  alter_field_without_default_make_nullable_dms_redshift_disabled_user.py  alter_field_without_default_make_nullable_with_db_default.py  multiple_operations.py  (+3 more)
tests/mocks/: __init__.py  mock_connection.py  mock_cursor_wrapper.py  mock_model_state.py  mock_project_state.py
tests/test_project/: Pipfile  db.sqlite3  requirements.txt
(+13 files in other folders)
